Commit to fix the overflow issue in the galleryWidget on the deployed site.

--- a/assignment-lunacal/src/styles/galleryWidget.css
+++ b/assignment-lunacal/src/styles/galleryWidget.css
@@ -90,7 +90,7 @@
 .gallery-images-container > div{
     height: 100%;
     white-space: nowrap;
-    flex: 0 0 29%;
+    flex: 0 0 29.5%;
 }
 .gallery-images-container > div > img{
     height: 100%;
